@@ -6,5 +6,8 @@ fullscreen mode. To install unpack to lib/editor/atto/plugins/fullscreen,
 and visit the admin notifications page to install.  Then add the button
 on the Atto toolbar settings page (maybe next to html).
 
-All original files are copyright Daniel Thies 2014 dthies@ccal.edu
+If you wish only administrators and editing teachers to have access to this
+plugin, you can set the configuration opttion for this editor plugin.
+
+All original files are copyright Daniel Thies 2014 onward dethies@gmail.com
 and are licensed under the included GPL 3.
