@@ -18,7 +18,7 @@
  * Strings for component 'atto_fullscreen', language 'en'.
  *
  * @package    atto_fullscreen
- * @copyright  2014 onward Daniel Thies <dthies@ccal.edu>
+ * @copyright  2014 onward Daniel Thies <dethies@gmail.com>
  * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
 
