@@ -18,7 +18,7 @@
  * Settings that allow configuration of the fullscreen appearance
  *
  * @package    atto_fullscreen
- * @copyright  2015 Daniel Thies (dthies@ccal.edu)
+ * @copyright  2015 onward Daniel Thies <dethies@gmail.com>
  * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
 
