@@ -17,7 +17,7 @@ YUI.add('moodle-atto_fullscreen-button', function (Y, NAME) {
 
 /*
  * @package    atto_fullscreen
- * @copyright  2014 Daniel Thies <dthies@ccal.edu>
+ * @copyright  2014 onward Daniel Thies <dethies@gmail.com>
  * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
 
@@ -48,7 +48,8 @@ Y.namespace('M.atto_fullscreen').Button = Y.Base.create('button', Y.M.editor_att
         var host = this.get('host');
         button.set('title', M.util.get_string('pluginname', 'atto_fullscreen'));
 
-        // In fullscreen mode the editor uses fixed positioning with a empty div for a background
+        // In fullscreen mode the editor uses fixed positioning with a empty
+        // div for a background.
         this._background = Y.Node.create('<div style="position: relative"></div>');
 
         // After all plugins have been loaded for the first time, finish configuration and add screen resizing listener.
@@ -58,6 +59,15 @@ Y.namespace('M.atto_fullscreen').Button = Y.Base.create('button', Y.M.editor_att
             Y.on('windowresize', Y.bind(this._fitToScreen, this));
         }, this, button);
 
+        // If editor loses focus, leave fullscreen.
+        Y.one('body').on('focus', function(e, button, host) {
+            if (button.getData(STATE) && !host.editor.ancestor('.editor_atto_wrap').contains(e.target) &&
+                !e.target.hasClass('moodle-dialogue') && !e.target.ancestor('.moodle-dialogue') &&
+                !e.target.one('.moodle-dialogue')) {
+                this.unHighlightButtons(FULLSCREEN);
+                this._setFullscreen(button);
+            }
+        }, this, button, host);
     },
 
     // Do not let other plugins disable us.
@@ -106,7 +116,7 @@ Y.namespace('M.atto_fullscreen').Button = Y.Base.create('button', Y.M.editor_att
             "height": host.editor.get('winHeight'),
             "width": host.editor.get('winWidth')
         });
-        window.scroll(this._background.getX(), this._background.getY());
+        window.scrollTo(this._background.getX(), this._background.getY());
 
         host._wrapper.setStyles({
             "maxWidth": "100%",
@@ -115,9 +125,9 @@ Y.namespace('M.atto_fullscreen').Button = Y.Base.create('button', Y.M.editor_att
         });
 
         host.editor.show();
-        height = parseFloat(host.editor.getComputedStyle('height'))
-            + host.editor.get('winHeight')
-            - parseFloat(host._wrapper.getComputedStyle('height'));
+        height = parseFloat(
+            host.editor.getComputedStyle('height')
+        ) + host.editor.get('winHeight') - parseFloat(host._wrapper.getComputedStyle('height'));
         host.editor.setStyles({
             "height": height,
             "maxHeight": height
@@ -155,7 +165,7 @@ Y.namespace('M.atto_fullscreen').Button = Y.Base.create('button', Y.M.editor_att
                     "height": host._wrapper.getComputedStyle('height'),
                     "width": host._wrapper.getComputedStyle('width')
                 });
-                window.scroll(this._background.getX(), this._background.getY());
+                window.scrollTo(this._background.getX(), this._background.getY());
             }
             this.editor.hide();
         }
@@ -184,7 +194,7 @@ Y.namespace('M.atto_fullscreen').Button = Y.Base.create('button', Y.M.editor_att
             Y.one('body').insertBefore(this._background, host._wrapper);
             host._wrapper.setStyles({position: 'fixed', "top": '0px', left: '0px', scroll: "auto"});
 
-            // Use CSS to hide navigation
+            // Use CSS to hide navigation.
             Y.one('body').addClass('atto-fullscreen');
 
             host.textarea.setStyles({
